Fix z-index

--- a/insider_out.client/src/app/fragments/sidebar/sidebar.component.scss
+++ b/insider_out.client/src/app/fragments/sidebar/sidebar.component.scss
@@ -5,6 +5,7 @@
     padding: 10px;
     display: flex;
     flex-direction: column;
+    z-index: 1000;
     
     @include mixins.non-phone() {
         position: sticky;
